# d2sim.rs

./: Cargo.toml  readme.md
examples/asyncnetwork/lcr_leader_election/: asynchlcr.rs  main.rs
examples/asyncnetwork/spanning_tree/: main.rs  spanning_tree.rs
examples/basic/: basic.rs  main.rs  readme.md
examples/lcr_leader_election/: lcr.rs  main.rs
examples/network/simple_net/: layer2.rs  layer3.rs  main.rs  netbuilder.rs  router.rs
examples/network/simpledv/: builder.rs  layer2.rs  layer3.rs  main.rs  packet.rs  rest.rs  router.rs  simpledv.rs  types.rs
examples/network/simpledv/simpledv/: addr.rs  config.rs  constants.rs  metric.rs  neighbordiscovery.rs  neighbortable.rs  packets.rs  routedissemination.rs  routingtable.rs  timer.rs
examples/synch/lcr_leader_election/: lcr.rs  main.rs
src/: basicnet.rs  channel.rs  channels.rs  component.rs  dummycomponent.rs  environment.rs  keys.rs  lib.rs  main.rs  scheduler.rs  sim.rs  simbase.rs  simtime.rs  simvars.rs  synch.rs  topo.rs  util.rs
src/basicnet/: dummylayer3.rs  layertraits.rs  nettraits.rs  packet.rs  simbase.rs  simplelayer2.rs  types.rs
src/channels/: delay_channel.rs
src/synch/: channel.rs  process.rs
src/topo/: anchoredrandomgraph.rs  anchoredrandomgraphbuilder.rs  dot.rs  sim.rs  topo.rs  topobuilder.rs  topodecl.rs  topogen.rs
src/util/: internalref.rs  uid.rs
