[package]
name = "grappy"
version = "0.1.0"
authors = ["effie"]
edition = "2018"

[dependencies]
rand = "0.8.4"

[[example]]
name = "synch_lcr"
path = "examples/synch/lcr_leader_election/main.rs"

[[example]]
name = "asynch_lcr"
path = "examples/asyncnetwork/lcr_leader_election/main.rs"

#[[bin]]
#name = "lcr"
#path = "src/bin/lcr1"


#[features]
#stdout = []