[package]
name = "d2simrs"
version = "0.1.0"
authors = ["effie"]
edition = "2018"

[dependencies]
rand = "0.8.4"
petgraph = "0.6.0"
#priority-queue = "1.2.0"

[[example]]
name = "basic"
path = "examples/basic/main.rs"

[[example]]
name = "synch_lcr"
path = "examples/synch/lcr_leader_election/main.rs"

[[example]]
name = "asynch_lcr"
path = "examples/asyncnetwork/lcr_leader_election/main.rs"

[[example]]
name = "spanning_tree"
path = "examples/asyncnetwork/spanning_tree/main.rs"

[[example]]
name = "simple_dv"
path = "examples/network/simpledv/main.rs"

[[example]]
name = "net_test"
path = "examples/network/bypass_borrow/main.rs"

[[example]]
name = "simple_net"
path = "examples/network/simple_net/main.rs"


#[features]
#stdout = []